--- a/2.html
+++ b/2.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--<meta  http-equiv="refresh" content="3">-->
 </head>
-<a href="https://foxford.ru/courses/3812/activate/POPIT" target="_blank"> <button style="background-color: #97f7cc;
+<a href="https://foxford.ru/courses/6167/activate/course7/" target="_blank"> <button style="background-color: #97f7cc;
         color: black;
         font-size: 25px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         border-radius: 15px;">
-        Олимпиадный курс Трушина на месяц
+        Олимпиадный курс Трушина на неделю
     </button>
     <br><br>
     
@@ -24,7 +24,7 @@
 </button>
 <br><br>
 </a>
-    <a href="https://foxford.ru/courses/3773/activate/foxformonth" target="_blank"> <button style="background-color: #97f7cc;
+!--    <a href="https://foxford.ru/courses/3773/activate/foxformonth" target="_blank"> <button style="background-color: #97f7cc;
         color: black;
         font-size: 25px;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -32,7 +32,7 @@
         Олимпиадный курс Пенкина на месяц
     </button>
     <br><br>
-</a>
+</a> -->
 
 <a href="https://drive.google.com/drive/folders/1qMrNBGBmqLHLYX3ilczOiQlYRu0arsvo" target="_blank"> <button style="background-color: #97f7cc;
     color: black;
@@ -43,7 +43,7 @@
 </button>
 <br><br>
 </a>
-<a href="https://foxford.ru/courses/3832/activate/topstart" target="_blank"> <button style="background-color: #97f7cc;
+!-- <a href="https://foxford.ru/courses/3832/activate/topstart" target="_blank"> <button style="background-color: #97f7cc;
     color: black;
     font-size: 25px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -70,3 +70,4 @@
 </button>
 <br><br>
 </a>
+-->
